# vitamin-e

./: README.md  build_g++.sh  slam.sh
sources/: CMakeLists.txt
sources/app/: CMakeLists.txt
sources/app/slam/: CMakeLists.txt
sources/app/slam/src/: main.cpp
sources/lib/: CMakeLists.txt
sources/lib/calibration/: CMakeLists.txt
sources/lib/calibration/include/: calib_loader.hpp
sources/lib/calibration/src/: calib_loader.cpp
sources/lib/camera/: CMakeLists.txt
sources/lib/camera/include/: camera.hpp  camera_parameter.hpp  perspective_camera.hpp  perspective_camera_parameter.hpp
sources/lib/camera/src/: camera.cpp  camera_parameter.cpp  perspective_camera.cpp  perspective_camera_parameter.cpp
sources/lib/common/include/: definition.hpp
sources/lib/feature_tracking/: CMakeLists.txt
sources/lib/feature_tracking/include/: feature_tracking.hpp  feature_tracking_parameter.hpp
sources/lib/feature_tracking/src/: feature_tracking.cpp  feature_tracking_parameter.cpp  hill_climbing.cpp  hill_climbing.hpp
sources/lib/feature_tracking/test/: test.cpp
sources/lib/initial_estimation/: CMakeLists.txt
sources/lib/initial_estimation/include/: camera_pose_initial_estimation.hpp  camera_pose_initial_estimation_parameter.hpp
sources/lib/initial_estimation/src/: camera_pose_initial_estimation.cpp  camera_pose_initial_estimation_parameter.cpp
sources/lib/initial_estimation/test/: test.cpp
sources/lib/optimization/: CMakeLists.txt
sources/lib/optimization/include/: base_optimization.hpp  camera_pose_optimization.hpp  camera_pose_optimization_parameter.hpp  point_optimization.hpp  point_optimization_parameter.hpp
sources/lib/optimization/src/: base_optimization.cpp  camera_pose_optimization.cpp  camera_pose_optimization_parameter.cpp  point_optimization.cpp  point_optimization_parameter.cpp
sources/lib/subspace_gauss_newton/: CMakeLists.txt
sources/lib/subspace_gauss_newton/include/: camera_pose_subspace_gauss_newton.hpp  feature_buffer.hpp  point_subspace_gauss_newton.hpp  reproj_subspace_gauss_newton.hpp  simultaneous_subspace_gauss_newton.hpp  subspace_gauss_newton.hpp  target_indices.hpp  world_buffer.hpp
sources/lib/subspace_gauss_newton/src/: camera_pose_subspace_gauss_newton.cpp  feature_buffer.cpp  point_subspace_gauss_newton.cpp  simultaneous_subspace_gauss_newton.cpp  world_buffer.cpp
sources/lib/subspace_gauss_newton/test/: test.cpp
sources/lib/test_tool/: CMakeLists.txt
sources/lib/test_tool/include/: test_dataset.hpp  test_tool.hpp
sources/lib/test_tool/src/: camera_mount.cpp  camera_mount.hpp  environment.hpp  environment_builder.cpp  environment_builder.hpp  test_dataset.cpp  test_tool.cpp
sources/lib/types/: CMakeLists.txt
sources/lib/types/include/: abstract_parameter.hpp  abstract_worker.hpp  camera_pose.hpp  frame.hpp  keypoint.hpp  point.hpp  track.hpp
sources/lib/types/src/: abstract_worker.cpp  camera_pose.cpp  frame.cpp  keypoint.cpp  point.cpp  track.cpp
sources/lib/utils/: CMakeLists.txt
sources/lib/utils/include/: flt_util.hpp  mat_util.hpp
sources/lib/utils/src/: flt_util.cpp  mat_util.cpp
sources/lib/video/: CMakeLists.txt
sources/lib/video/include/: video_loader.hpp
sources/lib/video/src/: video_loader.cpp
sources/lib/visualization/: CMakeLists.txt
sources/lib/visualization/include/: feature_visualizer.hpp  world_visualizer.hpp
sources/lib/visualization/src/: feature_visualizer.cpp  world_visualizer.cpp
sources/lib/vitamin_e/: CMakeLists.txt
sources/lib/vitamin_e/include/: vitamin_e.hpp  vitamin_e_parameter.hpp
sources/lib/vitamin_e/src/: vitamin_e.cpp  vitamin_e_parameter.cpp
